--- a/brand-exposure.html
+++ b/brand-exposure.html
@@ -1,34 +1,35 @@
 
-
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
 <head>
-<!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-7VMH5W3FET"></script>
 <script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'G-7VMH5W3FET');
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('consent', 'default', {
+      'analytics_storage': 'denied',
+      'ad_storage': 'denied',
+      'ad_user_data': 'denied',
+      'ad_personalization': 'denied',
+      'wait_for_update': 500
+    });
 </script>
+<!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+})(window,document,'script','dataLayer','GTM-TN9PGRFK');</script>
+<!-- End Google Tag Manager -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Amplify your brand's reach to over 1 million impressions at the premier Gulf Education Exhibition, Qatar Education Expo 2026. Explore our 360° marketing ecosystem for sponsors and exhibitors in the MENA region.">
     <title>Sponsor & Exhibitor Brand Exposure | Gulf Education Exhibition | Qatar Education Expo 2026</title>
-    <link rel="icon" href="https://res.cloudinary.com/dj3vhocuf/image/upload/v1762639402/Untitled_design_-_2025-11-09T033152.664_aerlhr.png" type="image/png">
+    <link rel="icon" type="image/png" sizes="16x16" href="https://res.cloudinary.com/dj3vhocuf/image/upload/w_16,h_16,c_fit/v1762639402/Untitled_design_-_2025-11-09T033152.664_aerlhr.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="https://res.cloudinary.com/dj3vhocuf/image/upload/w_32,h_32,c_fit/v1762639402/Untitled_design_-_2025-11-09T033152.664_aerlhr.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="https://res.cloudinary.com/dj3vhocuf/image/upload/w_180,h_180,c_fit/v1762639402/Untitled_design_-_2025-11-09T033152.664_aerlhr.png">
     <link rel="canonical" href="https://eduexpoqatar.com/brand-exposure.html" />
     <link rel="alternate" hreflang="en" href="https://eduexpoqatar.com/brand-exposure.html" />
     <link rel="alternate" hreflang="ar" href="https://eduexpoqatar.com/brand-exposure-ar.html" />
-    <link rel="alternate" hreflang="en-QA" href="https://eduexpoqatar.com/brand-exposure.html" />
-    <link rel="alternate" hreflang="en-SA" href="https://eduexpoqatar.com/brand-exposure.html" />
-    <link rel="alternate" hreflang="en-AE" href="https://eduexpoqatar.com/brand-exposure.html" />
-    <link rel="alternate" hreflang="en-KW" href="https://eduexpoqatar.com/brand-exposure.html" />
-    <link rel="alternate" hreflang="en-BH" href="https://eduexpoqatar.com/brand-exposure.html" />
-    <link rel="alternate" hreflang="en-OM" href="https://eduexpoqatar.com/brand-exposure.html" />
-    <link rel="alternate" hreflang="en-GB" href="https://eduexpoqatar.com/brand-exposure.html" />
-    <link rel="alternate" hreflang="en-CA" href="https://eduexpoqatar.com/brand-exposure.html" />
-    <link rel="alternate" hreflang="en-US" href="https://eduexpoqatar.com/brand-exposure.html" />
     <link rel="alternate" hreflang="x-default" href="https://eduexpoqatar.com/brand-exposure.html" />
     <link rel="stylesheet" href="index.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -39,20 +40,19 @@
     [
       {
         "@context": "https://schema.org",
-        "@type": "Organization",
-        "name": "Qatar Education Expo 2026",
-        "url": "/index.html",
-        "logo": "https://res.cloudinary.com/dj3vhocuf/image/upload/f_auto,q_auto/v1761210698/logo500x250_i8opbv.webp",
-        "sameAs": [
-          "https://twitter.com/qatarexpo2026",
-          "https://linkedin.com/company/qatarexpo2026",
-          "https://instagram.com/qatarexpo2026"
-        ],
-        "contactPoint": {
-          "@type": "ContactPoint",
-          "telephone": "+974-7444-9111",
-          "contactType": "Customer Service",
-          "email": "partnerships@eduexpoqatar.com"
+        "@type": "Service",
+        "name": "Sponsor & Exhibitor Brand Exposure at Qatar Education Expo 2026",
+        "description": "Amplify your brand's reach to over 1 million impressions at the premier Gulf Education Exhibition, Qatar Education Expo 2026. Explore our 360° marketing ecosystem for sponsors and exhibitors in the MENA region.",
+        "url": "https://eduexpoqatar.com/brand-exposure.html",
+        "provider": {
+          "@type": "Organization",
+          "name": "Qatar Education Expo 2026",
+          "url": "https://eduexpoqatar.com/index.html"
+        },
+        "serviceType": "Sponsorship and Brand Marketing",
+        "areaServed": {
+          "@type": "Country",
+          "name": "QA"
         }
       },
       {
@@ -62,12 +62,12 @@
           "@type": "ListItem",
           "position": 1,
           "name": "Home",
-          "item": "/index.html"
+          "item": "https://eduexpoqatar.com/index.html"
         },{
           "@type": "ListItem",
           "position": 2,
           "name": "For Sponsors",
-          "item": "/sponsorship-tiers.html"
+          "item": "https://eduexpoqatar.com/sponsorship-tiers.html"
         },{
           "@type": "ListItem",
           "position": 3,
@@ -85,10 +85,14 @@
     </script>
 </head>
 <body>
+<!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-TN9PGRFK"
+height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<!-- End Google Tag Manager (noscript) -->
 
     <header class="main-header" id="main-header">
         <div class="container">
-            <a href="index.html" class="logo"><img src="https://res.cloudinary.com/dj3vhocuf/image/upload/f_auto,q_auto/v1761210698/logo500x250_i8opbv.webp" alt="Qatar Education Expo 2026 Logo"></a>
+            <a href="index.html" class="logo"><img src="https://res.cloudinary.com/dj3vhocuf/image/upload/f_auto,q_auto/v1762817230/logo_500_x_250_px_450_x_250_px_180_x_75_px_or55ec.png" alt="Qatar Education Expo 2026 Logo"></a>
             <button class="nav-toggle" aria-controls="main-nav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="hamburger-box">
                     <span class="hamburger-inner"></span>
@@ -228,14 +232,14 @@
                 <p class="subtitle">We create continuous visibility for our partners—before, during, and after the event—to ensure maximum impact and ROI.</p>
 
                 <div class="exposure-tabs-container">
-                    <div class="exposure-tabs">
-                        <button class="exposure-tab-btn active" data-tab="pre-event"><i class="fas fa-calendar-alt"></i> Pre-Event</button>
-                        <button class="exposure-tab-btn" data-tab="during-event"><i class="fas fa-users"></i> During Event</button>
-                        <button class="exposure-tab-btn" data-tab="post-event"><i class="fas fa-chart-line"></i> Post-Event</button>
+                    <div class="exposure-tabs" role="tablist" aria-label="Marketing Stages">
+                        <button class="exposure-tab-btn active" role="tab" aria-selected="true" aria-controls="pre-event-panel" id="pre-event-tab"><i class="fas fa-calendar-alt"></i> Pre-Event</button>
+                        <button class="exposure-tab-btn" role="tab" aria-selected="false" aria-controls="during-event-panel" id="during-event-tab"><i class="fas fa-users"></i> During Event</button>
+                        <button class="exposure-tab-btn" role="tab" aria-selected="false" aria-controls="post-event-panel" id="post-event-tab"><i class="fas fa-chart-line"></i> Post-Event</button>
                     </div>
 
                     <div class="exposure-content-panels">
-                        <div id="pre-event" class="exposure-content active pre-event-panel-with-mascot">
+                        <div id="pre-event-panel" class="exposure-content active pre-event-panel-with-mascot" role="tabpanel" aria-labelledby="pre-event-tab" tabindex="0">
                             <img src="https://res.cloudinary.com/dj3vhocuf/image/upload/f_auto,q_auto/v1762076631/owl-tech.2_qxwqmx.webp" alt="Qatar Education Expo's owl mascot with a laptop, representing the pre-event digital marketing campaign." class="pre-event-mascot">
                             <h3>Building Momentum, Generating Leads</h3>
                             <div class="exposure-panel-grid">
@@ -247,7 +251,7 @@
                                 <div class="exposure-benefit-item"><i class="fas fa-newspaper"></i> <h4>Media Partner Features</h4> <p>Opportunities for inclusion in our media partners' articles.</p></div>
                             </div>
                         </div>
-                        <div id="during-event" class="exposure-content">
+                        <div id="during-event-panel" class="exposure-content" role="tabpanel" aria-labelledby="during-event-tab" hidden tabindex="0">
                             <h3>Capturing Attention, Driving Engagement</h3>
                             <div class="exposure-panel-grid">
                                  <div class="exposure-benefit-item"><i class="fas fa-building"></i> <h4>On-Site Branding</h4> <p>Logo on banners, digital screens, and key locations at the venue.</p></div>
@@ -258,7 +262,7 @@
                                  <div class="exposure-benefit-item"><i class="fas fa-network-wired"></i> <h4>Exclusive Networking</h4> <p>Access to VIP lounges and leadership roundtables.</p></div>
                             </div>
                         </div>
-                        <div id="post-event" class="exposure-content">
+                        <div id="post-event-panel" class="exposure-content" role="tabpanel" aria-labelledby="post-event-tab" hidden tabindex="0">
                              <h3>Amplifying Your Message, Cementing Your Legacy</h3>
                              <div class="exposure-panel-grid">
                                 <div class="exposure-benefit-item"><i class="fas fa-film"></i> <h4>Highlight Videos</h4> <p>Showcase your brand and booth in official event summary videos.</p></div>
@@ -288,11 +292,13 @@
 
     </main>
     
+    <div id="cookie-banner"></div>
+
     <footer class="main-footer">
         <div class="container">
             <div class="footer-grid">
                 <div class="footer-col">
-                    <a href="index.html" class="logo"><img src="https://res.cloudinary.com/dj3vhocuf/image/upload/f_auto,q_auto/v1761223357/logo-white_1_pqcaph.webp" alt="Qatar Education Expo 2026 Logo"></a>
+                    <a href="index.html" class="logo"><img src="https://res.cloudinary.com/dj3vhocuf/image/upload/v1762860754/logo_500_x_250_px_450_x_250_px_180_x_75_px_4_cnqbla.png" alt="Qatar Education Expo 2026 Logo"></a>
                     <p>The premier event connecting educational leaders, institutions, and innovators in the MENA region.</p>
                 </div>
                 <div class="footer-col">
@@ -303,6 +309,7 @@
                         <li><a href="why-exhibit.html">For Exhibitors</a></li>
                         <li><a href="sponsorship-tiers.html">For Sponsors</a></li>
                         <li><a href="student-registration.html">Student Registration</a></li>
+                        <li><a href="blog.html">Blog</a></li>
                     </ul>
                 </div>
                  <div class="footer-col">
