--- a/career-counselling-ar.html
+++ b/career-counselling-ar.html
@@ -2,15 +2,13 @@
 <!DOCTYPE html>
 <html lang="ar" dir="rtl">
 <head>
-<!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-7VMH5W3FET"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'G-7VMH5W3FET');
-</script>
+<!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+})(window,document,'script','dataLayer','GTM-TN9PGRFK');</script>
+<!-- End Google Tag Manager -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="احصل على إرشاد متخصص للدراسة في الخارج في معرضنا التعليمي العالمي. نقدم استشارات متخصصة للطلاب الذين يتطلعون للدراسة في المملكة المتحدة، كندا، وجهات أخرى مرموقة من قطر في هذا المعرض التعليمي الدولي الرائد.">
@@ -35,7 +33,7 @@
         "@type": "Organization",
         "name": "معرض قطر للتعليم 2026",
         "url": "/index-ar.html",
-        "logo": "https://res.cloudinary.com/dj3vhocuf/image/upload/f_auto,q_auto/v1761210698/logo500x250_i8opbv.webp",
+        "logo": "https://res.cloudinary.com/dj3vhocuf/image/upload/f_auto,q_auto/v1762817230/logo_500_x_250_px_450_x_250_px_180_x_75_px_or55ec.png",
         "sameAs": [
           "https://twitter.com/qatarexpo2026",
           "https://linkedin.com/company/qatarexpo2026",
@@ -78,10 +76,14 @@
     </script>
 </head>
 <body>
+<!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-TN9PGRFK"
+height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<!-- End Google Tag Manager (noscript) -->
 
     <header class="main-header" id="main-header">
         <div class="container">
-            <a href="index-ar.html" class="logo"><img src="https://res.cloudinary.com/dj3vhocuf/image/upload/f_auto,q_auto/v1761210698/logo500x250_i8opbv.webp" alt="شعار معرض قطر للتعليم 2026"></a>
+            <a href="index-ar.html" class="logo"><img src="https://res.cloudinary.com/dj3vhocuf/image/upload/f_auto,q_auto/v1762817230/logo_500_x_250_px_450_x_250_px_180_x_75_px_or55ec.png" alt="شعار معرض قطر للتعليم 2026"></a>
             <button class="nav-toggle" aria-controls="main-nav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="hamburger-box">
                     <span class="hamburger-inner"></span>
@@ -131,7 +133,7 @@
                 <a href="booth-registration-ar.html" class="btn btn-primary btn-sm">احجز جناحك</a>
                 <a href="sponsorship-registration-ar.html" class="btn btn-primary btn-sm">كن راعيًا</a>
                 <div class="lang-switcher">
-                    <a href="career-counselling.html" hreflang="en" aria-label="Switch to English"><span>English</span><img src="https://cdn.jsdelivr.net/gh/lipis/flag-icons@7.0.0/flags/4x3/gb.svg" alt="UK Flag" class="lang-flag"></a>
+                    <a href="career-counselling.html" hreflang="en" aria-label="Switch to English">English</a>
                 </div>
             </div>
         </div>
@@ -140,21 +142,21 @@
     <main>
         <section class="page-header">
             <div class="container">
-                <h1>ارسم مستقبلك بإرشاد الخبراء</h1>
-                <p>جلسات مجانية وشخصية لمساعدتك في اختيار الجامعة والمسار المهني المناسبين.</p>
+                <h1>ارسم مستقبلك بإرشاد متخصص للدراسة في الخارج</h1>
+                <p>جلسات مجانية وشخصية في أكبر معرض جامعي في قطر لمساعدتك على اختيار المسار الصحيح للتعليم العالي.</p>
             </div>
         </section>
         
         <section class="feature-section bg-surface">
             <div class="container">
-                <h2>أطلق العنان لإمكانياتك</h2>
-                <p class="subtitle">صُممت خدماتنا المجانية لتوفير الوضوح والتوجيه لرحلتك الأكاديمية والمهنية.</p>
+                <h2>أطلق العنان لإمكانياتك في معرضنا التعليمي العالمي</h2>
+                <p class="subtitle">خدماتنا المجانية في هذا المعرض التعليمي مصممة لتوفير الوضوح والتوجيه لرحلتك الأكاديمية والمهنية.</p>
                 <div class="feature-list">
                     <div class="feature-item">
                         <div class="feature-icon"><i class="fas fa-user-friends"></i></div>
                         <div class="feature-text">
                             <h4>إرشاد شخصي</h4>
-                            <p>جلسات فردية لمناقشة طموحاتك ونقاط قوتك وخياراتك الأكاديمية مع مستشار خبير.</p>
+                            <p>جلسات فردية لمناقشة تطلعاتك ونقاط قوتك وخياراتك الأكاديمية مع مستشار خبير في المعرض التعليمي.</p>
                         </div>
                     </div>
                     <div class="feature-item">
@@ -168,28 +170,28 @@
                         <div class="feature-icon"><i class="fas fa-file-signature"></i></div>
                         <div class="feature-text">
                             <h4>بناء الملف الشخصي والسيرة الذاتية</h4>
-                            <p>تعلم كيفية صياغة سيرة ذاتية وبيان شخصي مقنع يجذب انتباه مسؤولي القبول بالجامعات.</p>
+                            <p>تعلم كيفية صياغة سيرة ذاتية ورسالة شخصية مقنعة تلفت انتباه مسؤولي القبول في الجامعات.</p>
                         </div>
                     </div>
                     <div class="feature-item">
                         <div class="feature-icon"><i class="fas fa-graduation-cap"></i></div>
                         <div class="feature-text">
                             <h4>مطابقة الجامعات</h4>
-                            <p>احصل على مساعدة الخبراء في تحديد قائمة مختصرة بالجامعات التي تتوافق تمامًا مع ملفك الأكاديمي وأهدافك المهنية.</p>
+                            <p>احصل على مساعدة الخبراء في اختيار الجامعات التي تتوافق مع أهدافك، سواء كنت تخطط للدراسة في المملكة المتحدة، كندا، أو وجهات أخرى.</p>
                         </div>
                     </div>
                     <div class="feature-item">
                         <div class="feature-icon"><i class="fas fa-award"></i></div>
                         <div class="feature-text">
                             <h4>إرشادات المنح الدراسية</h4>
-                            <p>ابحث عن المنح الدراسية العالمية وقدم عليها بمساعدة الخبراء في صياغة طلبات قوية.</p>
+                            <p>ابحث عن المنح الدراسية العالمية وقدم عليها بمساعدة الخبراء في صياغة طلبات قوية لرحلتك في التعليم العالي.</p>
                         </div>
                     </div>
                     <div class="feature-item">
                         <div class="feature-icon"><i class="fas fa-route"></i></div>
                         <div class="feature-text">
                             <h4>تخطيط المسار المهني</h4>
-                            <p>احصل على وضوح بشأن المجالات المهنية الناشئة واتجاهات الوظائف المستقبلية التي تتماشى مع طموحاتك طويلة الأجل.</p>
+                            <p>احصل على وضوح بشأن المجالات المهنية الناشئة واتجاهات الوظائف المستقبلية التي تتماشى مع طموحاتك طويلة الأجل بعد الدراسة في الخارج.</p>
                         </div>
                     </div>
                 </div>
@@ -198,16 +200,16 @@
 
         <section id="meet-the-experts-v2" class="bg-surface">
             <div class="container">
-                <h2>تعرف على مستشاريك</h2>
-                <p class="subtitle">يتمتع فريقنا من المستشارين المعتمدين بسنوات من الخبرة من أفضل المؤسسات التعليمية في جميع أنحاء العالم.</p>
+                <h2>قابل مستشاري الدراسة في الخارج</h2>
+                <p class="subtitle">يتمتع فريقنا من المستشارين المعتمدين بسنوات من الخبرة من أفضل المؤسسات التعليمية في جميع أنحاء العالم في هذا المعرض الجامعي في قطر.</p>
                 <div class="counselor-grid">
                     <div class="counselor-card-v2">
                         <img src="https://images.pexels.com/photos/415829/pexels-photo-415829.jpeg?auto=compress&cs=tinysrgb&w=400" alt="صورة د. عائشة المري" class="speaker-photo">
                         <div class="speaker-info">
                             <h4>د. عائشة المري</h4>
                             <p class="speaker-title">مستشارة مهنية رئيسية</p>
-                            <p class="speaker-org">بخبرة تزيد عن 15 عامًا في الإرشاد للتعليم العالي، تتخصص الدكتورة عائشة في مساعدة الطلاب على التنقل في إجراءات القبول في أفضل الجامعات.</p>
-                            <p class="counselor-specialty">متخصصة في: القبول في جامعات المملكة المتحدة والولايات المتحدة الأمريكية</p>
+                            <p class="speaker-org">بخبرة تزيد عن 15 عامًا في الإرشاد للتعليم العالي، تتخصص الدكتورة عائشة في مساعدة الطلاب على التنقل في إجراءات القبول لأفضل الجامعات.</p>
+                            <p class="counselor-specialty">متخصصة في: القبول في المملكة المتحدة والولايات المتحدة الأمريكية</p>
                         </div>
                     </div>
                     <div class="counselor-card-v2">
@@ -215,8 +217,8 @@
                         <div class="speaker-info">
                             <h4>السيد عمر حسن</h4>
                             <p class="speaker-title">مستشار القبول والمنح الدراسية</p>
-                            <p class="speaker-org">خبير في بناء الملف الشخصي وطلبات المنح الدراسية، ولديه سجل حافل في مساعدة الطلاب على تأمين التمويل لجامعات أحلامهم.</p>
-                             <p class="counselor-specialty">متخصص في: طلبات المنح الدراسية</p>
+                            <p class="speaker-org">خبير في بناء الملف الشخصي وطلبات المنح الدراسية، مع سجل حافل في مساعدة الطلاب على تأمين التمويل لجامعات أحلامهم.</p>
+                             <p class="counselor-specialty">متخصص في: طلبات المنح الدراسية والدراسة في كندا</p>
                         </div>
                     </div>
                 </div>
@@ -225,15 +227,15 @@
 
         <section id="counselling-faq">
             <div class="container">
-                <h2>لديك أسئلة؟ لدينا الإجابات.</h2>
+                <h2>هل لديك أسئلة؟ لدينا إجابات.</h2>
                 <div class="faq-accordion">
                     <div class="faq-item">
                         <button class="faq-question" aria-expanded="false">
-                            <span>هل الإرشاد المهني مجاني حقًا؟</span>
+                            <span>هل الإرشاد المهني في المعرض التعليمي مجاني حقًا؟</span>
                             <i class="fas fa-plus"></i>
                         </button>
                         <div class="faq-answer">
-                            <p>نعم، جميع خدمات الإرشاد المهني، بما في ذلك الجلسات الفردية والاختبارات النفسية، مجانية تمامًا لجميع الطلاب المسجلين الذين يحضرون المعرض.</p>
+                            <p>نعم، جميع خدمات الإرشاد المهني في معرض قطر للتعليم، بما في ذلك الجلسات الفردية والاختبارات النفسية، مجانية تمامًا لجميع الطلاب المسجلين الحاضرين في المعرض.</p>
                         </div>
                     </div>
                     <div class="faq-item">
@@ -242,7 +244,7 @@
                             <i class="fas fa-plus"></i>
                         </button>
                         <div class="faq-answer">
-                            <p>بعد <a href="student-registration-ar.html">التسجيل في الحدث</a>، ستتلقى بريدًا إلكترونيًا مع اقتراب تاريخ المعرض يحتوي على رابط لحجز الموعد الذي تفضله. المقاعد محدودة وتُمنح على أساس أسبقية الحجز.</p>
+                            <p>بعد <a href="student-registration-ar.html">التسجيل في الحدث</a>، ستتلقى بريدًا إلكترونيًا قبل موعد المعرض الجامعي يحتوي على رابط لحجز موعدك المفضل. الأماكن محدودة وتُمنح على أساس أسبقية الحجز.</p>
                         </div>
                     </div>
                     <div class="faq-item">
@@ -251,7 +253,7 @@
                             <i class="fas fa-plus"></i>
                         </button>
                         <div class="faq-answer">
-                            <p>بالتأكيد! نحن نشجع أولياء الأمور على أن يكونوا جزءًا من المحادثة. فقط أعلمنا عند حجز جلستك حتى نتمكن من استيعاب الجميع بشكل مريح.</p>
+                            <p>بالتأكيد! نحن نشجع أولياء الأمور على أن يكونوا جزءًا من المحادثة في معرض القبول هذا. فقط أخبرنا عند حجز جلستك حتى نتمكن من استيعاب الجميع بشكل مريح.</p>
                         </div>
                     </div>
                 </div>
@@ -261,7 +263,7 @@
         <section class="counselling-final-cta">
             <div class="container">
                  <h2>هل أنت مستعد لاتخاذ الخطوة الأولى؟</h2>
-                 <p>مستقبلك في انتظارك. سجل للحصول على بطاقتك المجانية لمعرض قطر للتعليم 2026 اليوم لفتح الوصول إلى خدمات الإرشاد المهني المتخصصة لدينا، ومقابلة أفضل الجامعات، والمزيد.</p>
+                 <p>مستقبلك في انتظارك. سجل للحصول على بطاقتك المجانية لمعرض قطر للتعليم 2026 اليوم للوصول إلى خدمات الإرشاد المهني المتخصصة لدينا، والالتقاء بالجامعات الدولية، وتخطيط رحلتك في التعليم العالي في أفضل معرض لاستقطاب الطلاب في المنطقة.</p>
                  <div class="cta-group">
                     <a href="student-registration-ar.html" class="btn btn-primary">سجل مجانًا الآن</a>
                  </div>
@@ -275,7 +277,7 @@
         <div class="container">
             <div class="footer-grid">
                 <div class="footer-col">
-                    <a href="index-ar.html" class="logo"><img src="https://res.cloudinary.com/dj3vhocuf/image/upload/f_auto,q_auto/v1761223357/logo-white_1_pqcaph.webp" alt="شعار معرض قطر للتعليم 2026"></a>
+                    <a href="index-ar.html" class="logo"><img src="https://res.cloudinary.com/dj3vhocuf/image/upload/v1762860754/logo_500_x_250_px_450_x_250_px_180_x_75_px_4_cnqbla.png" alt="شعار معرض قطر للتعليم 2026"></a>
                     <p>الحدث الرائد الذي يجمع قادة التعليم والمؤسسات والمبتكرين في منطقة الشرق الأوسط وشمال أفريقيا.</p>
                 </div>
                 <div class="footer-col">
@@ -286,6 +288,7 @@
                         <li><a href="why-exhibit-ar.html">للعارضين</a></li>
                         <li><a href="sponsorship-tiers-ar.html">للرعاة</a></li>
                         <li><a href="student-registration-ar.html">تسجيل الطلاب</a></li>
+                        <li><a href="blog-ar.html">المدونة</a></li>
                     </ul>
                 </div>
                  <div class="footer-col">
@@ -329,63 +332,6 @@
     <a href="https://wa.me/97474449111" class="whatsapp-fab" target="_blank" aria-label="Chat on WhatsApp">
         <i class="fab fa-whatsapp"></i>
     </a>
-
-    <!-- Exit Intent Modal -->
-    <div id="exit-intent-modal" class="modal-overlay">
-        <div class="modal-content exit-intent-content" role="dialog" aria-modal="true" aria-labelledby="exit-modal-title">
-            <button class="modal-close-btn" aria-label="Close">&times;</button>
-            <h3 id="exit-modal-title">حمّل الملف التعريفي قبل المغادرة!</h3>
-            <p>احصل على الملف التعريفي الرسمي للعارضين والرعاة، شاملاً مخطط الأرضية وتفاصيل عائد الاستثمار، مباشرة إلى بريدك الإلكتروني.</p>
-            <button id="open-deck-form-btn" class="btn btn-primary">احصل على الملف</button>
-        </div>
-    </div>
-
-    <!-- Deck Request Modal -->
-    <div id="deck-request-modal" class="modal-overlay">
-        <div class="modal-content" role="dialog" aria-modal="true" aria-labelledby="deck-modal-title">
-            <button class="modal-close-btn" aria-label="Close">&times;</button>
-            <div id="deck-form-container">
-                <h3 id="deck-modal-title">احصل على الملف التعريفي الرسمي</h3>
-                <p>يرجى تقديم التفاصيل الخاصة بك لتلقي ملف العارضين والرعاة على الفور.</p>
-                <form id="deck-request-form" novalidate style="margin-top: 1.5rem;">
-                    <input type="hidden" name="form_source" value="Deck Request Popup">
-                    <div class="form-group">
-                        <label for="deck-form-name">الاسم الكامل *</label>
-                        <input type="text" id="deck-form-name" name="name" required>
-                        <div class="error-message"></div>
-                    </div>
-                    <div class="form-group">
-                        <label for="deck-form-email">البريد الإلكتروني للعمل *</label>
-                        <input type="email" id="deck-form-email" name="email" required>
-                        <div class="error-message"></div>
-                    </div>
-                     <div class="form-group">
-                        <label for="deck-form-phone">رقم الجوال *</label>
-                        <input type="tel" id="deck-form-phone" name="phone" required>
-                        <div class="error-message"></div>
-                    </div>
-                    <div class="form-row">
-                        <div class="form-group">
-                            <label for="deck-form-designation">المسمى الوظيفي *</label>
-                            <input type="text" id="deck-form-designation" name="designation" required>
-                            <div class="error-message"></div>
-                        </div>
-                        <div class="form-group">
-                            <label for="deck-form-organization">المنظمة *</label>
-                            <input type="text" id="deck-form-organization" name="organization" required>
-                            <div class="error-message"></div>
-                        </div>
-                    </div>
-                    <button type="submit" class="btn btn-primary" style="width: 100%;">حمّل الآن</button>
-                </form>
-            </div>
-            <div id="deck-form-success" style="display: none; text-align: center;">
-                <i class="fas fa-check-circle" style="font-size: 3rem; color: #4db6ac; margin-bottom: 1rem;" aria-hidden="true"></i>
-                <h3>شكرًا لك!</h3>
-                <p>يجب أن يبدأ التنزيل تلقائيًا. إذا لم يحدث ذلك، يرجى التحقق من مانع النوافذ المنبثقة أو المحاولة مرة أخرى.</p>
-            </div>
-        </div>
-    </div>
     
     <!-- Mobile Sticky Bar -->
     <div id="mobile-sticky-bar">
