--- a/career-counselling.html
+++ b/career-counselling.html
@@ -30,15 +30,6 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     <link rel="canonical" href="https://eduexpoqatar.com/career-counselling.html" />
     <link rel="alternate" hreflang="en" href="https://eduexpoqatar.com/career-counselling.html" />
     <link rel="alternate" hreflang="ar" href="https://eduexpoqatar.com/career-counselling-ar.html" />
-    <link rel="alternate" hreflang="en-QA" href="https://eduexpoqatar.com/career-counselling.html" />
-    <link rel="alternate" hreflang="en-SA" href="https://eduexpoqatar.com/career-counselling.html" />
-    <link rel="alternate" hreflang="en-AE" href="https://eduexpoqatar.com/career-counselling.html" />
-    <link rel="alternate" hreflang="en-KW" href="https://eduexpoqatar.com/career-counselling.html" />
-    <link rel="alternate" hreflang="en-BH" href="https://eduexpoqatar.com/career-counselling.html" />
-    <link rel="alternate" hreflang="en-OM" href="https://eduexpoqatar.com/career-counselling.html" />
-    <link rel="alternate" hreflang="en-GB" href="https://eduexpoqatar.com/career-counselling.html" />
-    <link rel="alternate" hreflang="en-CA" href="https://eduexpoqatar.com/career-counselling.html" />
-    <link rel="alternate" hreflang="en-US" href="https://eduexpoqatar.com/career-counselling.html" />
     <link rel="alternate" hreflang="x-default" href="https://eduexpoqatar.com/career-counselling.html" />
     <link rel="stylesheet" href="index.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -49,20 +40,24 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     [
       {
         "@context": "https://schema.org",
-        "@type": "Organization",
-        "name": "Qatar Education Expo 2026",
-        "url": "/index.html",
-        "logo": "https://res.cloudinary.com/dj3vhocuf/image/upload/f_auto,q_auto/v1762817230/logo_500_x_250_px_450_x_250_px_180_x_75_px_or55ec.png",
-        "sameAs": [
-          "https://twitter.com/qatarexpo2026",
-          "https://linkedin.com/company/qatarexpo2026",
-          "https://instagram.com/qatarexpo2026"
-        ],
-        "contactPoint": {
-          "@type": "ContactPoint",
-          "telephone": "+974-7444-9111",
-          "contactType": "Customer Service",
-          "email": "partnerships@eduexpoqatar.com"
+        "@type": "Service",
+        "name": "Free Career Counselling for Study Abroad",
+        "description": "Get free, expert career counselling at Qatar Education Expo 2026, the leading university fair in Doha. Our guidance is perfect for students planning to study abroad, including top destinations like the UK and Canada.",
+        "url": "https://eduexpoqatar.com/career-counselling.html",
+        "provider": {
+          "@type": "Organization",
+          "name": "Qatar Education Expo 2026",
+          "url": "https://eduexpoqatar.com/index.html"
+        },
+        "serviceType": "Career Counselling",
+        "areaServed": {
+          "@type": "Country",
+          "name": "QA"
+        },
+        "offers": {
+          "@type": "Offer",
+          "price": "0",
+          "priceCurrency": "QAR"
         }
       },
       {
@@ -72,12 +67,12 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
           "@type": "ListItem",
           "position": 1,
           "name": "Home",
-          "item": "/index.html"
+          "item": "https://eduexpoqatar.com/index.html"
         },{
           "@type": "ListItem",
           "position": 2,
           "name": "For Students",
-          "item": "/student-registration.html"
+          "item": "https://eduexpoqatar.com/student-registration.html"
         },{
           "@type": "ListItem",
           "position": 3,
@@ -249,29 +244,29 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 <h2>Have Questions? We Have Answers.</h2>
                 <div class="faq-accordion">
                     <div class="faq-item">
-                        <button class="faq-question" aria-expanded="false">
+                        <button class="faq-question" aria-expanded="false" aria-controls="faq-answer-1">
                             <span>Is the career counselling at the education fair really free?</span>
                             <i class="fas fa-plus"></i>
                         </button>
-                        <div class="faq-answer">
+                        <div id="faq-answer-1" class="faq-answer" role="region">
                             <p>Yes, all career counselling services at the Qatar Education Fair, including one-on-one sessions and psychometric tests, are completely free for all registered students attending the expo.</p>
                         </div>
                     </div>
                     <div class="faq-item">
-                        <button class="faq-question" aria-expanded="false">
+                        <button class="faq-question" aria-expanded="false" aria-controls="faq-answer-2">
                             <span>How do I book a specific time for my session?</span>
                             <i class="fas fa-plus"></i>
                         </button>
-                        <div class="faq-answer">
+                        <div id="faq-answer-2" class="faq-answer" role="region">
                             <p>After you <a href="student-registration.html">register for the event</a>, you will receive an email closer to the university expo date with a link to book your preferred time slot. Slots are limited and are on a first-come, first-served basis.</p>
                         </div>
                     </div>
                     <div class="faq-item">
-                        <button class="faq-question" aria-expanded="false">
+                        <button class="faq-question" aria-expanded="false" aria-controls="faq-answer-3">
                             <span>Can my parents join the counselling session?</span>
                             <i class="fas fa-plus"></i>
                         </button>
-                        <div class="faq-answer">
+                        <div id="faq-answer-3" class="faq-answer" role="region">
                             <p>Absolutely! We encourage parents to be part of the conversation at this admission fair. Just let us know when you book your session so we can accommodate everyone comfortably.</p>
                         </div>
                     </div>
