--- a/contact.html
+++ b/contact.html
@@ -30,15 +30,6 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     <link rel="canonical" href="https://eduexpoqatar.com/contact.html" />
     <link rel="alternate" hreflang="en" href="https://eduexpoqatar.com/contact.html" />
     <link rel="alternate" hreflang="ar" href="https://eduexpoqatar.com/contact-ar.html" />
-    <link rel="alternate" hreflang="en-QA" href="https://eduexpoqatar.com/contact.html" />
-    <link rel="alternate" hreflang="en-SA" href="https://eduexpoqatar.com/contact.html" />
-    <link rel="alternate" hreflang="en-AE" href="https://eduexpoqatar.com/contact.html" />
-    <link rel="alternate" hreflang="en-KW" href="https://eduexpoqatar.com/contact.html" />
-    <link rel="alternate" hreflang="en-BH" href="https://eduexpoqatar.com/contact.html" />
-    <link rel="alternate" hreflang="en-OM" href="https://eduexpoqatar.com/contact.html" />
-    <link rel="alternate" hreflang="en-GB" href="https://eduexpoqatar.com/contact.html" />
-    <link rel="alternate" hreflang="en-CA" href="https://eduexpoqatar.com/contact.html" />
-    <link rel="alternate" hreflang="en-US" href="https://eduexpoqatar.com/contact.html" />
     <link rel="alternate" hreflang="x-default" href="https://eduexpoqatar.com/contact.html" />
     <link rel="stylesheet" href="index.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -49,21 +40,10 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     [
       {
         "@context": "https://schema.org",
-        "@type": "Organization",
-        "name": "Qatar Education Expo 2026",
-        "url": "/index.html",
-        "logo": "https://res.cloudinary.com/dj3vhocuf/image/upload/v1762860754/logo_500_x_250_px_450_x_250_px_180_x_75_px_4_cnqbla.png",
-        "sameAs": [
-          "https://twitter.com/qatarexpo2026",
-          "https://linkedin.com/company/qatarexpo2026",
-          "https://instagram.com/qatarexpo2026"
-        ],
-        "contactPoint": {
-          "@type": "ContactPoint",
-          "telephone": "+974-7444-9111",
-          "contactType": "Customer Service",
-          "email": "partnerships@eduexpoqatar.com"
-        }
+        "@type": "ContactPage",
+        "name": "Contact Us - Qatar Education Expo 2026",
+        "url": "https://eduexpoqatar.com/contact.html",
+        "mainContentOfPage": "Get in touch with the Qatar Education Expo 2026 team for inquiries about exhibiting, sponsoring, attending, or speaking."
       },
       {
         "@context": "https://schema.org",
@@ -72,7 +52,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
           "@type": "ListItem",
           "position": 1,
           "name": "Home",
-          "item": "/index.html"
+          "item": "https://eduexpoqatar.com/index.html"
         },{
           "@type": "ListItem",
           "position": 2,
@@ -97,7 +77,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
     <header class="main-header" id="main-header">
         <div class="container">
-            <a href="index.html" class="logo"><img src="https://res.cloudinary.com/dj3vhocuf/image/upload/v1762860754/logo_500_x_250_px_450_x_250_px_180_x_75_px_4_cnqbla.png" alt="Qatar Education Expo 2026 Logo"></a>
+            <a href="index.html" class="logo"><img src="https://res.cloudinary.com/dj3vhocuf/image/upload/f_auto,q_auto/v1762817230/logo_500_x_250_px_450_x_250_px_180_x_75_px_or55ec.png" alt="Qatar Education Expo 2026 Logo"></a>
             <button class="nav-toggle" aria-controls="main-nav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="hamburger-box">
                     <span class="hamburger-inner"></span>
@@ -218,8 +198,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                                 <div class="error-message"></div>
                             </div>
                             <div class="form-group">
-                                <label for="form-phone">Phone Number</label>
-                                <input type="tel" id="form-phone" name="phone">
+                                <label for="form-phone">Phone Number *</label>
+                                <input type="tel" id="form-phone" name="phone" required>
                                 <div class="error-message"></div>
                             </div>
                         </div>
