--- a/blog-ar.html
+++ b/blog-ar.html
@@ -1,5 +1,3 @@
-
-
 <!DOCTYPE html>
 <html lang="ar" dir="rtl">
 <head>
@@ -30,20 +28,28 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;700;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
     <script type="application/ld+json">
-    {
-      "@context": "https://schema.org",
-      "@type": "BreadcrumbList",
-      "itemListElement": [{
-        "@type": "ListItem",
-        "position": 1,
-        "name": "الرئيسية",
-        "item": "https://eduexpoqatar.com/index-ar.html"
-      },{
-        "@type": "ListItem",
-        "position": 2,
-        "name": "المدونة"
-      }]
-    }
+    [
+      {
+        "@context": "https://schema.org",
+        "@type": "CollectionPage",
+        "name": "المدونة | رؤى حول التعليم والدراسة في الخارج وتكنولوجيا التعليم | معرض قطر للتعليم 2026",
+        "url": "https://eduexpoqatar.com/blog-ar.html"
+      },
+      {
+        "@context": "https://schema.org",
+        "@type": "BreadcrumbList",
+        "itemListElement": [{
+          "@type": "ListItem",
+          "position": 1,
+          "name": "الرئيسية",
+          "item": "https://eduexpoqatar.com/index-ar.html"
+        },{
+          "@type": "ListItem",
+          "position": 2,
+          "name": "المدونة"
+        }]
+      }
+    ]
     </script>
 </head>
 <body>
