--- a/blog-post-1-ar.html
+++ b/blog-post-1-ar.html
@@ -1,5 +1,3 @@
-
-
 <!DOCTYPE html>
 <html lang="ar" dir="rtl">
 <head>
@@ -161,7 +159,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                         </ul>
                     </div>
 
-                    <p>إن دمج الذكاء الاصطناعي في القبول الجامعي هو مجال متطور. من خلال فهم كيفية عمله والاستعداد بشكل استراتيجي، يمكن للطلاب التنقل في هذا العالم الجديد بثقة. توفر فعاليات مثل <strong>معرض قطر للتعليم 2026</strong> فرصة حيوية للتحدث مباشرة مع ممثلي القبول ومعرفة مباشرة كيف تستفيد أفضل الجامعات من التكنولوجيا لبناء هيئات طلابية للغد.</p>
+                    <p>إن دمج الذكاء الاصطناعي في القبول الجامعي هو مجال متطور. من خلال فهم كيفية عمله والاستعداد بشكل استراتيجي، يمكن للطلاب التنقل في هذا العالم الجديد بثقة. توفر فعاليات مثل <strong><a href="index-ar.html">معرض قطر للتعليم 2026</a></strong> فرصة حيوية للتحدث مباشرة مع ممثلي القبول ومعرفة مباشرة كيف تستفيد أفضل الجامعات من التكنولوجيا لبناء هيئات طلابية للغد.</p>
 
                     <!-- Inline Social Share for Mobile -->
                     <div class="social-share-inline">
@@ -203,7 +201,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                             </div>
                         </a>
                         <a href="blog-post-3-ar.html" class="article-card">
-                            <img src="https://media.gettyimages.com/id/513314751/video/four-students-using-a-digital-tablet.jpg?s=640x640&k=20&c=AG63IiUyD4eHohQab0m1B4OAOpCwP9S4RUFCGqb4QaA=" alt="طالب يعمل على مشروع إبداعي، محاط بالرسومات وجهاز كمبيوتر محمول وكاميرا." class="article-card__image">
+                           <img src="https://media.gettyimages.com/id/513314751/video/four-students-using-a-digital-tablet.jpg?s=640x640&k=20&c=AG63IiUyD4eHohQab0m1B4OAOpCwP9S4RUFCGqb4QaA=" alt="طالب يعمل على مشروع إبداعي، محاط بالرسومات وجهاز كمبيوتر محمول وكاميرا." class="article-card__image">
                             <div class="article-card__content">
                                 <h3>من الفصل الدراسي إلى الحياة المهنية: بناء ملف أعمال طلابي متميز</h3>
                                 <p class="article-card__excerpt">درجاتك هي جزء واحد فقط من القصة. تعلم كيفية بناء ملف أعمال يجذب انتباه أفضل الجامعات وأصحاب العمل...</p>
