--- a/blog-post-1.html
+++ b/blog-post-1.html
@@ -1,5 +1,3 @@
-
-
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
 <head>
@@ -171,7 +169,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                         </ul>
                     </div>
 
-                    <p>The integration of AI in university admissions is an evolving field. By understanding how it works and preparing strategically, students can navigate this new world with confidence. Events like the <strong>Qatar Education Expo 2026</strong> provide a vital opportunity to speak directly with admissions representatives and learn firsthand how top universities are leveraging technology to build the student bodies of tomorrow.</p>
+                    <p>The integration of AI in university admissions is an evolving field. By understanding how it works and preparing strategically, students can navigate this new world with confidence. Events like the <strong><a href="index.html">Qatar Education Expo 2026</a></strong> provide a vital opportunity to speak directly with admissions representatives and learn firsthand how top universities are leveraging technology to build the student bodies of tomorrow.</p>
 
                     <!-- Inline Social Share for Mobile -->
                     <div class="social-share-inline">
